Fix alignment of heading

--- a/core/app/assets/stylesheets/base/header.scss
+++ b/core/app/assets/stylesheets/base/header.scss
@@ -1,7 +1,6 @@
 .header {
   width: 100%;
   overflow: hidden;
-  padding-top: 25px;
 
   .background {
     z-index: -1;
