--- a/core/app/assets/stylesheets/pages/in-your-browser.scss
+++ b/core/app/assets/stylesheets/pages/in-your-browser.scss
@@ -1,5 +1,5 @@
 .in-your-browser-header {
-  padding: 20px 0 10px;
+  padding: 30px 0;
   text-align: center;
 }
 
